--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.9",
+    "@types/node-sass": "^4.11.1",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "node-sass": "^5.0.0",
