--- a/package.json
+++ b/package.json
@@ -3,17 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.9",
-    "@types/node-sass": "^4.11.1",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "typescript": "^4.1.3",
+    "typescript": "^4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -41,9 +36,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.2",
     "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.19.9",
+    "@types/node-sass": "^4.11.1",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10"
   }
 }
